# TFG_XGBoost_Federated

./: Federated_performance.py  README.md  client5G.py  dataset_con_site_id.xlsx  pyproject.toml  server5G.py  task5G.py  xgboost_centralizado.py
Federated_model/: client5G.py  server5G.py  task5G.py
